--- a/bpf-fs-events-cli/Cargo.toml
+++ b/bpf-fs-events-cli/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 bpf-fs-events = { path = "../bpf-fs-events" }
+bpf-fs-events-sock = { path = "../bpf-fs-events-sock" }
+clap = { version = "4", features = ["derive"] }
 ctrlc = "3.4.4"
