--- a/bpf-fs-events/Cargo.toml
+++ b/bpf-fs-events/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 libbpf-rs = "0.23.2"
 libc = "0.2.155"
 plain = "0.2.3"
+rlimit = "0.10.1"
 structopt = "0.3.26"
 
 # Linking statically appears to be broken,
