--- a/bpf-fs-events-cli/Cargo.toml
+++ b/bpf-fs-events-cli/Cargo.toml
@@ -8,3 +8,5 @@ bpf-fs-events = { path = "../bpf-fs-events" }
 bpf-fs-events-sock = { path = "../bpf-fs-events-sock" }
 clap = { version = "4", features = ["derive"] }
 ctrlc = "3.4.4"
+env_logger = "0.11.3"
+log = "0.4.21"
